# cw2-CPS

./: CMakeLists.txt  README.md  distortion.cl  encoder.cpp  group.cl  jpge.cpp  jpge.h  opencl.cpp  opencl.h  quantization.cl  stb_image.cpp  stb_image.h  subsample.cl  test.cl  test1.cl
